   return (years, weeks). [MG]
 * colors(..., name) is much more efficient. [SW]
 * alias(object,) clears object's @alias. Suggested by spork. [MG]
 * v(<integer>) is no longer the same as get(me/<integer>). Instead, it
   always the <integer>th stack entry. [MG] [Rhost] [MUX]
 * It's now documented that replace() can alter multiple words at once. 
   Reported by Jules. [MG]

Minor changes:
 * ansi() now accepts a space-separated list of color codes, with later
   groups overriding earlier ones. Allows you to specify basic ANSI codes
   after XTERM color codes. Suggested by spork, [Rhost]. [MG]
 * Compiler warning fixed by ChaosMageX.
 * Help fixes. [MG]
 * The tables mapping color names and RGB values are now generated by a
   script in utils/. [SW]
 * Converting from named colors to the nearest xterm or ansi equivalent is
   much more efficient. [SW]
 * Converting from extended colors to ansi colors is smarter. Based on
   work by Padraic. [SW]
 * Email registration no longer pretends to work with really!old!addresses.
   [SW].
 * Better error reporting in logs and event hooks on failed email
   registration. Suggested by Padriac. [SW]

Fixes:
 * %c contained the evaluated input (the same as %u), instead of the
   unevaluated input. Reported by Ingwaz. [MG]
 * repeat() could write partial ANSI tags, causing buffer overflows. From a
   report by Ashen-Shugar. [MG]
 * dbcks didn't reset corrupt exit's source room. Patch by Padriac.
 * lmath(and,) returned 1 instead of 0. Reported by Padriac. [SW].
 * Mixing old-style ansi colors and xterm colors was broken. [MG]
 * Players who couldn't see xterm colors would sometimes get a highlighted
   foreground color by mistake. [MG]

Version 1.8.5 patchlevel 3                                 Aug 23, 2012

Fixes:
 * Fix a crash bug in new color code. Discovered by ChaosMageX, fixed by
   Intrevis and [SW].

Functions:
 * name() with no arguments is now an error. It should always have been, but