@@ -51,6 +51,8 @@ Functions:
    always the <integer>th stack entry. [MG] [Rhost] [MUX]
  * It's now documented that replace() can alter multiple words at once. 
    Reported by Jules. [MG]
+ * Some terminfo() information can now be retrieved by mortals on other 
+   players' connections. Suggested by spork. [MG]
 
 Minor changes:
  * ansi() now accepts a space-separated list of color codes, with later
